2002-03-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/file-server.c (file_server_monitor_file): 
	take an already open FD as argument (so that we don't 
	require root access here).

	* src/udp-server.c (udp_server_start): 
	reader and queue are passed to udp_server_start,
	not udp_server new.

	* src/pconfig.c (pconfig_set): 
	new -u (--user) option. Prelude LML can now run as a
	simple user.

	* src/udp-server.c (udp_server_new): 
	resolve the provided address if any. Else use INADDR_ANY.

	* src/pconfig.c (pconfig_set): 
	add configuration hook for enabling the UDP server,
	setting server address, setting server port.

	* src/main.c (sig_handler): 
	only call udp_server_close if an UDP server is active.

	(main): only start the UDP server if the user want it.

	* prelude-lml.conf.in: 
	Update default configuration file.

2002-03-26  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/regex.c: 
	* src/main.c:
	more cleanup, performance fix.

	* src/regex.c (regex_destroy): 
	use list_for_each_safe

	* src/file-server.c: 
	monitor local files.

	* src/server-logic.c: 
	used by file-server implementation.

	* src/pconfig.c: 
	(pconfig_set): add the --file option.

	* src/main.c: 
	* src/queue.c: 
	* src/udp-server.c: 
	* src/log-plugins.c: coding style fix.

	
2002-03-22  Krzysztof Zaraska  <kzaraska@student.uci.agh.edu.pl>

	* plugins/pax/pax.c: include <inttypes.h> and <sys/types.h>
	for compatibility with *BSD systems

2002-03-22  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* AUTHORS: 
	Pierre-Jean Turpeau, not me :-)
	
	* src/Makefile.am (DEFS): local include before anything else.
